# compbiotutorials-2023

./: LICENSE  README.md  pyproject.toml  tox.ini
compbiotutorials_2023/: __init__.py
docs/source/: api_index.rst  conf.py  index.rst
tutorials/: brainglobe_installation_tutorial.ipynb  brainglobe_installation_tutorial.md  cell_detection_tutorial.ipynb  environment.yaml
