[project]
name = "compbiotutorials-2023"
authors = [{name = "Alessandro Felder", email= "a.felder@ucl.ac.uk"}]
description = "Demo code for good practice and BrainGlobe"
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
  "cellfinder",
  "cellfinder-core",
  "cellfinder-napari",
  "brainreg",
  "brainreg-napari",
  "brainreg-segment",
  "brainglobe-napari@git+https://github.com/brainglobe/brainglobe-napari",
  "jupyterlab"
  ]

[project.urls]
homepage = "https://github.com/alessandrofelder/compbiotutorials-2023"
bug_tracker = "https://github.com/alessandrofelder/compbiotutorials-2023/issues"
documentation = "https://alessandrofelder.github.io/compbiotutorials-2023"

source_code = "https://github.com/alessandrofelder/compbiotutorials-2023"
user_support = "https://github.com/alessandrofelder/compbiotutorials-2023/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["compbiotutorials_2023*"]
exclude = ["tests", "docs*"]


[tool.pytest.ini_options]
addopts = "--cov=compbiotutorials_2023"

[tool.black]
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
  "docs/",
  "docs/source/",
]


[tool.ruff]
line-length = 79
exclude = ["__init__.py","build",".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
